# vetkeys

./: .cz.toml  .gitignore  Cargo.toml  README.md  RELEASING.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: backend-motoko-format-check.yml  backend-motoko.yml  backend-rust-canbench.yml  backend-rust.yml  backend.yml  cdk.yml  clippy.yml  conventional-commits.yml  create-npm-release-pr.yml  encrypted-maps-example.yml  examples-basic-bls-signing.yml  examples-basic-ibe.yml  examples-basic-timelock-ibe.yml  examples-encrypted-chat.yml  examples-encrypted-notes-dapp.yml  examples-password-manager-with-metadata.yml  examples-password-manager.yml  frontend.yml  frontend_ic_vetkeys.yml  key-manager-example.yml  mops-test.yml  npm-publish.yml  provision-darwin.sh  provision-frontend-linux.sh  provision-linux.sh  publish-frontend-docs.yml  publish-frontend.yml  publish-ic-vetkeys.yml  release-npm.yml  release-rust.yml  sdk_encrypted_maps.yml  sdk_key_manager.yml  sdk_utils.yml
backend/canisters/ic_vetkeys_encrypted_maps_canister/: Makefile  dfx.json
backend/canisters/ic_vetkeys_manager_canister/: Makefile  dfx.json
backend/ic_vetkeys/: Cargo.toml
backend/ic_vetkeys/src/: lib.rs
backend/mo/ic_vetkeys/: CHANGELOG.md  README.md  mops.toml
backend/rs/benchmarks/: Cargo.toml
backend/rs/benchmarks/ibe/src/: main.rs
backend/rs/canisters/: icp.yaml
backend/rs/ic_vetkeys/: CHANGELOG.md  Cargo.toml  README.md
backend/rs/ic_vetkeys_test_utils/: Cargo.toml
cdk/: README.md
cdk/encrypted_maps/: README.md
cdk/encrypted_maps/src/: lib.rs
cdk/encrypted_maps/tests/: tests.rs
cdk/encrypted_maps_example/: encrypted_maps_example.did
cdk/encrypted_maps_example/src/: lib.rs
cdk/key_manager/: README.md
cdk/key_manager/src/: lib.rs
cdk/key_manager/tests/: tests.rs
docs/: index.html  styles.css
examples/basic_bls_signing/: README.md  deploy_locally.sh  dfx.json
examples/basic_bls_signing/backend/: Cargo.toml  backend.did
examples/basic_bls_signing/backend/src/: lib.rs  types.rs
examples/basic_bls_signing/frontend/: eslint.config.mjs  package-lock.json  package.json
examples/basic_bls_signing/motoko/: dfx.json  icp.yaml  mops.toml
examples/basic_bls_signing/rust/: dfx.json
examples/basic_ibe/: README.md  deploy_locally.sh  dfx.json
examples/basic_ibe/backend/: Cargo.toml  backend.did
examples/basic_ibe/frontend/: package-lock.json  package.json  vite.config.ts
examples/basic_ibe/motoko/: deploy_locally.sh  dfx.json  icp.yaml  mops.toml
examples/basic_ibe/rust/: dfx.json  icp.yaml
examples/basic_timelock_ibe/: README.md  deploy_locally.sh  dfx.json  icp.yaml
examples/basic_timelock_ibe/backend/: Cargo.toml  backend.did
examples/basic_timelock_ibe/frontend/: package-lock.json  package.json  vite.config.ts
examples/encrypted_chat/: DIAGRAMS.md  README.md  SPEC.md
examples/encrypted_chat/frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
examples/encrypted_chat/rust/: dfx.json  icp.yaml
examples/encrypted_chat/rust/backend/: Cargo.toml  Makefile  backend.did
examples/encrypted_chat/rust/backend/src/: lib.rs  types.rs
examples/encrypted_chat/rust/backend/tests/: direct_chat.rs  group_chat.rs  misc.rs
examples/encrypted_chat/rust/backend/tests/common/: mod.rs
examples/encrypted_notes_dapp_vetkd/: README.md
examples/password_manager/: README.md  deploy_locally.sh  dfx.json
examples/password_manager_with_metadata/: README.md  deploy_locally.sh  dfx.json
examples/password_manager_with_metadata/rust/backend/: Cargo.toml
examples/verifiable_nft/: README.md
examples/verifiable_nft/rust/backend/: Cargo.toml  Makefile  backend.did
examples/verifiable_nft/rust/backend/src/: lib.rs  types.rs
examples/verifiable_nft/rust/backend/tests/: tests.rs
frontend/ic_vetkd_sdk_encrypted_maps_example/: make_did_bindings.sh
frontend/ic_vetkd_sdk_key_manager/: package.json
frontend/ic_vetkd_sdk_key_manager_example/: make_did_bindings.sh
frontend/ic_vetkd_sdk_utils/: package.json
frontend/ic_vetkeys/: CHANGELOG.md  README.md  eslint.config.mjs  make_did_bindings.sh  package.json  tsconfig.json  tsconfig.tests.json  typedoc.json  vite.config.ts
scripts/: gen_and_deploy_docs.sh  gen_and_deploy_frontend_docs.sh  gen_docs.sh  gen_frontend_docs.sh
sdk/: README.md
sdk/ic_vetkd_sdk_encrypted_maps/: .prettierignore  .prettierrc  README.md  package.json
sdk/ic_vetkd_sdk_encrypted_maps_example/: package.json  vite.config.ts
sdk/ic_vetkd_sdk_key_manager/: .prettierignore  README.md  package.json
sdk/ic_vetkd_sdk_key_manager_example/: package.json  vite.config.ts
sdk/ic_vetkd_sdk_utils/: README.md  package.json
(+222 files in other folders)
