[package]
edition = "2021"
name = "benchmarks"
version = "0.1.0"

[[bin]]
name = "ibe"
path = "ibe/src/main.rs"

[dependencies]
# FIXME: use versioned `canbench` when https://github.com/dfinity/canbench/pull/156 is merged and released
canbench-rs = { git = "https://github.com/dfinity/canbench.git", rev = "c588c56e19f3385bf8b23a3f0528a001af6a9817", optional = true }
candid = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-vetkeys = { path = "../ic_vetkeys" }
