[package]
edition = "2021"
name = "benchmarks"
version = "0.1.0"

[[bin]]
name = "ibe"
path = "ibe/src/main.rs"

[dependencies]
# FIXME: use versioned `canbench` when https://github.com/dfinity/canbench/pull/156 is merged and released
canbench-rs = { git = "https://github.com/dfinity/canbench.git", rev = "1060df50a147c1a31bbcefa5f1ded2cd2bcd4df6", optional = true }
candid = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-vetkeys = { path = "../ic_vetkeys" }
