[package]
edition = "2021"
name = "benchmarks"
version = "0.1.0"

[[bin]]
name = "ibe"
path = "ibe/src/main.rs"

[dependencies]
# FIXME: use versioned `canbench` when https://github.com/dfinity/canbench/pull/156 is merged and released
canbench-rs = { git = "https://github.com/dfinity/canbench.git", rev = "02869879713c693f9fa75b44c1a5b1e765d086e1", optional = true }
candid = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-vetkeys = { path = "../ic_vetkeys" }
