[package]
name = "ic-vetkeys-example-encrypted-chat-backend"
authors = ["DFINITY Stiftung"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Encrypted Chat using vetKeys"
repository = "https://github.com/dfinity/vetkeys"
rust-version = "1.85.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.3"
ic-dummy-getrandom-for-wasm = "0.1.0"
ic-stable-structures = "0.7.0"
ic-vetkeys = "0.3.0"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_with = "3.11.0"

[dev-dependencies]
ic-vetkeys = "0.3.0"
pocket-ic = "9.0.2"
rand_chacha = "0.9.0"
rand = "0.9.2"
