[package]
name = "ic-vetkd-example-password-manager-with-metadata-backend"
authors = ["DFINITY Stiftung"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Password Manager with Metadata based on vetKeys"
repository = "https://github.com/dfinity/vetkeys"
rust-version = "1.85.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = { workspace = true }
ic-dummy-getrandom-for-wasm = "0.1.0"
ic-stable-structures = { workspace = true }
ic-vetkeys = { workspace = true }
serde = "1.0.217"
serde_cbor = "0.11.2"
